RL: added Feature representation for state-action pairs

--- a/notebooks/Reinforcement learning.ipynb
+++ b/notebooks/Reinforcement learning.ipynb
@@ -1237,12 +1237,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a92b2d5",
+   "id": "f9f1610e",
    "metadata": {},
    "source": [
     "## Feature Construction for Function Approximation\n",
-    "\n",
-    "The way we represent states through features is crucial for reinforcement learning, as it directly impacts training speed, stability, and the ability to incorporate prior domain knowledge. Good feature construction can enable an RL agent to generalize well, especially when dealing with large or continuous state spaces.\n",
+    "We use features to represent a state. The way we represent states through features is crucial for reinforcement learning, as it directly impacts training speed, stability, and the ability to incorporate prior domain knowledge. Good feature construction can enable an RL agent to generalize well, especially when dealing with large or continuous state spaces.\n",
     "\n",
     "In linear function approximation, each feature is treated independently, meaning the model cannot naturally capture interactions between features. To address this, we often engineer or combine features to create richer representations that capture these relationships.\n",
     "\n",
@@ -1280,7 +1279,7 @@
     "3. Its simplicity makes it easier to debug and visualize compared to complex non-linear methods like neural networks.\n",
     "\n",
     "### Neural Networks for Feature Representation\n",
-    "Another way to represent features in reinforcement learning is by using a neural network. In this approach, we can directly feed raw state data into the network rather than relying on hand-crafted features. The network automatically learns feature representations through the process of backpropagation, discovering patterns and relationships within the data as it trains.\n",
+    "Another way to represent features in reinforcement learning is by using a neural network. In this approach, we can directly feed raw state data into the network rather than relying on hand-crafted features. The network automatically learns feature representations implicitly through the process of backpropagation, discovering patterns and relationships within the data as it trains.\n",
     "\n",
     "The learning process is framed as a supervised learning problem, where:\n",
     "* Input: The raw state or its basic attributes.\n",
@@ -1297,6 +1296,53 @@
     "1. Prone to unstable learning, especially in RL where training data is non-stationary and bootstrapped targets are used.\n",
     "2. The learned features are often uninterpretable, making it difficult to understand why certain decisions are made.\n",
     "3. Require careful tuning of hyperparameters and large amounts of data for effective learning."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d47581c4",
+   "metadata": {},
+   "source": [
+    "## On-Policy Control with Approximation\n",
+    "On-policy prediction methods, such as gradient Monte Carlo and semi-gradient TD, allow us to estimate the state-value function $v_\\pi(s)$ for a fixed policy $\\pi$. These methods are useful for evaluating how good a given policy is, but by themselves, they do not improve the policy because knowing the state-value only tells the agent which state is good, but doesn't tell it how to get there.\n",
+    "\n",
+    "To enable control, the agent must not only evaluate a policy but also improve it iteratively. This requires estimating action-values $q_\\pi(s, a)$ instead of just state values. The action-value function represents the expected return for taking a specific action a in a given state s and then following the policy thereafter.\n",
+    "\n",
+    "By approximating $q_\\pi(s, a)$ using function approximation techniques, the agent can generalize across large or continuous state-action spaces. This makes it possible to handle environments where storing exact values for every state-action pair would be infeasible.\n",
+    "\n",
+    "### Feature Representation for State-Action Pairs\n",
+    "To approximate the action-value function using function approximation, we extend the idea of state-value approximation. Just like with state values, we estimate the action value as the dot product between the weights and a feature vector\n",
+    "\n",
+    "$$\\hat{q}(s, a; w) = w^\\top x(s, a)$$\n",
+    "\n",
+    "Here, $x(s, a)$ is the feature representation of the state-action pair.\n",
+    "\n",
+    "Given a feature vector $x(s)$ that represents a state $s$ using $n$ features, we also need to inform the function approximator which action was taken. To do this, we can stack multiple copies of the state feature vector, one for each possible action. Suppose there are $m$ possible actions for each state, then the stacked feature vector, $x(s, a)$, will then have size $(n \\times m, 1)$, where\n",
+    "\n",
+    "$$\n",
+    "x(s, a) =\n",
+    "\\begin{bmatrix}\n",
+    "0 \\\\ \\vdots \\\\ 0 \\\\ x(s) \\\\ 0 \\\\ \\vdots \\\\ 0\n",
+    "\\end{bmatrix} \\in \\mathbb{R}^{n \\cdot m}\n",
+    "$$\n",
+    "\n",
+    "Note that for a given state-action pair $(s, a)$, only the block corresponding to action $a$ will contain the actual state features $x(s)$, and all other blocks will be filled with zeros. This creates a sparse vector that clearly separates different actions, effectively giving each action its own set of weights.\n",
+    "\n",
+    "Stacking has the advantages of\n",
+    "1. Clear, interpretable separation of actions.\n",
+    "2. Effective for linear approximation and structured feature methods like tile coding.\n",
+    "\n",
+    "But also has the issues of\n",
+    "1. Feature vector size grows linearly with the number of actions $n \\cdot m$.\n",
+    "2. Inefficient for environments with very large action spaces, leading to many zeros and wasted computation.\n",
+    "\n",
+    "Thus, the approximator learns separate estimators for each state-action pair, just like in tabular Q-learning but with generalization across states.\n",
+    "\n",
+    "As an alternative for stacking, we can encode the action directly and append it to the original state feature vector $x(s)$. For example, we can use a one-hot vector or a learned action embedding to represent the action and concatenate it with the state features to form a compact representation.\n",
+    "\n",
+    "This works especially well with neural networks, which can handle non-linear relationships and automatically learn how state and action features interact. However, for linear function approximators, this approach is much weaker as a linear function cannot easily capture the complex patterns between state and action from a single concatenated vector. In such cases, stacking remains the more effective choice.\n",
+    "\n",
+    "### Episodic Semi-gradient Control"
    ]
   },
   {
