RL: Added semi-gradient SARSA, Q-learing, expected SARSA

--- a/notebooks/Reinforcement learning.ipynb
+++ b/notebooks/Reinforcement learning.ipynb
@@ -1342,7 +1342,88 @@
     "\n",
     "This works especially well with neural networks, which can handle non-linear relationships and automatically learn how state and action features interact. However, for linear function approximators, this approach is much weaker as a linear function cannot easily capture the complex patterns between state and action from a single concatenated vector. In such cases, stacking remains the more effective choice.\n",
     "\n",
-    "### Episodic Semi-gradient Control"
+    "### Episodic Semi-gradient SARSA\n",
+    "Episodic semi-gradient SARSA is a control algorithm using function approximation. The weight udpate is similar to that of the semi-gradient TD but instead of using the approximated state value, we use the approximated action-value, where\n",
+    "\n",
+    "$$w \\leftarrow w + \\alpha \\big( R_{t+1} + \\gamma \\hat{q}(S_{t+1}, A_{t+1}; w) - \\hat{q}(S_t, A_t; w) \\big) \\nabla_w \\hat{q}(S_t, A_t; w)$$\n",
+    "\n",
+    "For a constant policy, this method converges in the same way that TD(0) does.\n",
+    "\n",
+    "### Episodic Semi-gradient SARSA Algorithm\n",
+    "1. Given:\n",
+    "   - Initial policy $\\pi$ (e.g., $\\epsilon$-greedy)\n",
+    "   - Learning rate $\\alpha \\in (0, 1]$\n",
+    "   - Discount factor $\\gamma \\in [0, 1]$\n",
+    "\n",
+    "2. Initialize:\n",
+    "   - A parametrized function $\\hat{q}(s, a)$ arbitrarily for all $s \\in \\mathcal{S}$, $a \\in \\mathcal{A}$\n",
+    "\n",
+    "3. Repeat (for each episode):\n",
+    "   - Initialize starting state $S_0$\n",
+    "   - Choose action $A_0 \\sim \\pi(\\cdot \\mid S_0)$\n",
+    "   - For each timestep $t$:\n",
+    "     - Take action $A_t$, observe the reward $R_{t+1}$ and the next state $S_{t+1}$\n",
+    "     - Choose the next action according to the current policy $A_{t+1} \\sim \\pi(\\cdot \\mid S_{t+1})$\n",
+    "     - Update:\n",
+    "       $$w \\leftarrow w + \\alpha \\big( R_{t+1} + \\gamma \\hat{q}(S_{t+1}, A_{t+1}; w) - \\hat{q}(S_t, A_t; w) \\big) \\nabla_w \\hat{q}(S_t, A_t; w)$$\n",
+    "     - Update $\\pi$ to be greedy or $\\epsilon$-greedy with respect to $q$\n",
+    "\n",
+    "4. Repeat until convergence:\n",
+    "   - Continue until $q(s, a)$ converges.\n",
+    "   \n",
+    "Note: This algorithm is very similar to the tabular SARSA method, except the weight update is now using semi-gradient method \n",
+    "\n",
+    "\n",
+    "### Episodic Semi-Gradient SARSA\n",
+    "\n",
+    "Episodic Semi-Gradient SARSA is a control algorithm that uses function approximation to estimate the action-value function $\\hat{q}(s, a; w)$.  \n",
+    "It extends the tabular SARSA method by replacing the table of Q-values with a parameterized function whose weights $w$ are updated using gradient-based methods.\n",
+    "\n",
+    "The weight update rule is similar to the semi-gradient TD update, but instead of using the estimated state value $v(s)$, we use the esimated action-value $\\hat{q}(s, a; w)$, where\n",
+    "\n",
+    "$$w \\leftarrow w + \\alpha \\big[ R_{t+1} + \\gamma \\hat{q}(S_{t+1}, A_{t+1}; w) - \\hat{q}(S_t, A_t; w) \\big] \\nabla_w \\hat{q}(S_t, A_t; w)$$\n",
+    "\n",
+    "For a fixed policy, this method converges in the same way as TD(0).\n",
+    "\n",
+    "\n",
+    "### Episodic Semi-Gradient SARSA Algorithm\n",
+    "\n",
+    "1. Given:\n",
+    "   - Initial policy $\\pi$ (e.g., $\\epsilon$-greedy)\n",
+    "   - Learning rate $\\alpha \\in (0, 1]$\n",
+    "   - Discount factor $\\gamma \\in [0, 1]$\n",
+    "   - A parameterized action-value function $\\hat{q}(s, a; w)$\n",
+    "\n",
+    "2. Initialize:\n",
+    "   - Weights $w$ arbitrarily for all $s \\in \\mathcal{S}, a \\in \\mathcal{A}$.\n",
+    "\n",
+    "3. Repeat (for each episode):\n",
+    "   - Initialize the starting state $S_0$\n",
+    "   - Choose initial action $A_0 \\sim \\pi(\\cdot \\mid S_0)$\n",
+    "\n",
+    "   For each timestep $t$:\n",
+    "   - Take action $A_t$, observe reward $R_{t+1}$ and next state $S_{t+1}$.\n",
+    "   - Choose next action $A_{t+1} \\sim \\pi(\\cdot \\mid S_{t+1})$ based on the current policy.\n",
+    "   - Update the weights:\n",
+    "     $$w \\leftarrow w + \\alpha \\big[ R_{t+1} + \\gamma \\hat{q}(S_{t+1}, A_{t+1}; w) - \\hat{q}(S_t, A_t; w) \\big] \\nabla_w \\hat{q}(S_t, A_t; w)$$\n",
+    "   - Update policy $\\pi$ to be greedy or $\\epsilon$-greedy with respect to the current $\\hat{q}(s, a; w)$.\n",
+    "\n",
+    "4. Repeat until convergence:\n",
+    "   - Continue running episodes until $\\hat{q}(s, a; w)$ stabilizes.\n",
+    "\n",
+    "### Extending to Q-Learning and Expected SARSA\n",
+    "The same semi-gradient approach can be applied to other control algorithms like Q-learning and Expected SARSA by simply changing the target value used in the update rule. The structure of the weight update remains the same, but the way we estimate the next state's action value differs.\n",
+    "\n",
+    "#### 1. Semi-Gradient Q-Learning\n",
+    "Q-learning is off-policy, meaning it updates the value of the current state-action pair using the best possible action at the next state, independent of the policy used to select actions during exploration. The update rule is\n",
+    "\n",
+    "$$w \\leftarrow w + \\alpha \\big[ R_{t+1} + \\gamma \\max_{a'} \\hat{q}(S_{t+1}, a'; w) - \\hat{q}(S_t, A_t; w) \\big] \\nabla_w \\hat{q}(S_t, A_t; w)$$\n",
+    "\n",
+    "\n",
+    "#### 2. Semi-Gradient Expected SARSA\n",
+    "Expected SARSA is a generalization of SARSA that uses the expected action-value under the current policy at the next state instead of relying on a single sampled action. The update rule is\n",
+    "\n",
+    "$$w \\leftarrow w + \\alpha \\big[ R_{t+1} + \\gamma \\sum_{a'} \\pi(a'|S_{t+1}) \\hat{q}(S_{t+1}, a'; w) - \\hat{q}(S_t, A_t; w) \\big] \\nabla_w \\hat{q}(S_t, A_t; w)$$"
    ]
   },
   {
