RL: Added systematic exploration for function approx

--- a/notebooks/Reinforcement learning.ipynb
+++ b/notebooks/Reinforcement learning.ipynb
@@ -1342,38 +1342,6 @@
     "\n",
     "This works especially well with neural networks, which can handle non-linear relationships and automatically learn how state and action features interact. However, for linear function approximators, this approach is much weaker as a linear function cannot easily capture the complex patterns between state and action from a single concatenated vector. In such cases, stacking remains the more effective choice.\n",
     "\n",
-    "### Episodic Semi-gradient SARSA\n",
-    "Episodic semi-gradient SARSA is a control algorithm using function approximation. The weight udpate is similar to that of the semi-gradient TD but instead of using the approximated state value, we use the approximated action-value, where\n",
-    "\n",
-    "$$w \\leftarrow w + \\alpha \\big( R_{t+1} + \\gamma \\hat{q}(S_{t+1}, A_{t+1}; w) - \\hat{q}(S_t, A_t; w) \\big) \\nabla_w \\hat{q}(S_t, A_t; w)$$\n",
-    "\n",
-    "For a constant policy, this method converges in the same way that TD(0) does.\n",
-    "\n",
-    "### Episodic Semi-gradient SARSA Algorithm\n",
-    "1. Given:\n",
-    "   - Initial policy $\\pi$ (e.g., $\\epsilon$-greedy)\n",
-    "   - Learning rate $\\alpha \\in (0, 1]$\n",
-    "   - Discount factor $\\gamma \\in [0, 1]$\n",
-    "\n",
-    "2. Initialize:\n",
-    "   - A parametrized function $\\hat{q}(s, a)$ arbitrarily for all $s \\in \\mathcal{S}$, $a \\in \\mathcal{A}$\n",
-    "\n",
-    "3. Repeat (for each episode):\n",
-    "   - Initialize starting state $S_0$\n",
-    "   - Choose action $A_0 \\sim \\pi(\\cdot \\mid S_0)$\n",
-    "   - For each timestep $t$:\n",
-    "     - Take action $A_t$, observe the reward $R_{t+1}$ and the next state $S_{t+1}$\n",
-    "     - Choose the next action according to the current policy $A_{t+1} \\sim \\pi(\\cdot \\mid S_{t+1})$\n",
-    "     - Update:\n",
-    "       $$w \\leftarrow w + \\alpha \\big( R_{t+1} + \\gamma \\hat{q}(S_{t+1}, A_{t+1}; w) - \\hat{q}(S_t, A_t; w) \\big) \\nabla_w \\hat{q}(S_t, A_t; w)$$\n",
-    "     - Update $\\pi$ to be greedy or $\\epsilon$-greedy with respect to $q$\n",
-    "\n",
-    "4. Repeat until convergence:\n",
-    "   - Continue until $q(s, a)$ converges.\n",
-    "   \n",
-    "Note: This algorithm is very similar to the tabular SARSA method, except the weight update is now using semi-gradient method \n",
-    "\n",
-    "\n",
     "### Episodic Semi-Gradient SARSA\n",
     "\n",
     "Episodic Semi-Gradient SARSA is a control algorithm that uses function approximation to estimate the action-value function $\\hat{q}(s, a; w)$.  \n",
@@ -1423,7 +1391,29 @@
     "#### 2. Semi-Gradient Expected SARSA\n",
     "Expected SARSA is a generalization of SARSA that uses the expected action-value under the current policy at the next state instead of relying on a single sampled action. The update rule is\n",
     "\n",
-    "$$w \\leftarrow w + \\alpha \\big[ R_{t+1} + \\gamma \\sum_{a'} \\pi(a'|S_{t+1}) \\hat{q}(S_{t+1}, a'; w) - \\hat{q}(S_t, A_t; w) \\big] \\nabla_w \\hat{q}(S_t, A_t; w)$$"
+    "$$w \\leftarrow w + \\alpha \\big[ R_{t+1} + \\gamma \\sum_{a'} \\pi(a'|S_{t+1}) \\hat{q}(S_{t+1}, a'; w) - \\hat{q}(S_t, A_t; w) \\big] \\nabla_w \\hat{q}(S_t, A_t; w)$$\n",
+    "\n",
+    "## Systematic Exploration In Functional Approximation\n",
+    "Systematic exploration is critical in functional approximation as it forces the agent to explore and therefore obtain a better knowledge of the full environment. One way of encouraging systematic exploration is through optimisic initialization, which is done by initializing all the estimated state-values or action values to be higher than the actual ones. Similar to the tabular case, this makes the agent optimistic about all the states or state-action pairs so it will explore them in the beginning and gradually update the estimation to it's true values. However, this is not as simple as the tabular case due to two issues.\n",
+    "1. We can only intiailize our optimistic initial values by initializing the weights $w$ of the function approximator. However in if the function approximator is a complex, non-linear function, like a neural network. We cannot gaurenteen that we can initialize the weights so the predicted value is always optimistic for all possible inputs\n",
+    "2. Function approximation uses generalization for faster learning, but it also causes problems for exploration because the agent can think optimistically for one states and visit it and updates its estimation based on the observed return and transitions. However, the nearby states' values will also be updated due to the generalization, and therefore their updated values may not be optimistic any more although the state itself is not yet visited.\n",
+    "\n",
+    "$\\epsilon$-greedy is another way that enforces exploration since the agent is foreced to taken a random choice of action from time to time. $\\epsilon$-greedy works for all cases of function approximation because it only depends on the final estimated values from the function approximator and therefore not impacted by generalization. However, the issue with $\\epsilon$-greedy is that its exploration purely depends on randomness, which is not systematic.\n",
+    "\n",
+    "## Systematic Exploration in Function Approximation\n",
+    "Systematic exploration is critical in reinforcement learning with function approximation because it ensures that the agent explores different parts of the environment instead of getting stuck in a small subset of states or actions. This broader exploration helps the agent build a more accurate understanding of the environment and improves the quality of the learned policy.\n",
+    "\n",
+    "### Optimistic Initialization\n",
+    "One common way to encourage exploration is through optimistic initialization, where the initial value estimates for all states or state-action pairs are set higher than their true values. This makes the agent initially optimistic about every unexplored state or action, motivating it to try them out in the beginning. Over time, as the agent gathers real experience, these optimistic estimates are gradually corrected toward their true values.\n",
+    "\n",
+    "While optimistic initialization works well in tabular methods, it becomes more challenging with function approximation due to two main issues:\n",
+    "\n",
+    "1. Weight Initialization Limitation: in function approximation, we don't directly store a separate value for each state or state-action pair. Instead, we initialize the weights $w$ of the function approximator. For simple linear models, we may be able to set weights so that initial predictions are optimistic. However, for complex, non-linear models like neural networks, there is no guarantee that initializing the weights will produce optimistic predictions across all possible states. This makes it hard to ensure consistent optimistic initialization.\n",
+    "\n",
+    "2. Impact of Generalization: function approximation relies on generalization, so updating the estimate for one state can also affect the values of nearby or similar states. For example, when the agent visits a state and updates its value based on the observed return, neighboring states may also have their values updated indirectly. This can cause the optimistic initial values of unvisited states to disappear prematurely, even though those states have never been explored. As a result, the agent might stop exploring too soon.\n",
+    "\n",
+    "### $\\epsilon$-Greedy Exploration\n",
+    "An alternative approach is $\\epsilon$-greedy exploration since it does not depend on optimistic initialization or how the weights are set. It only relies on the final outputs of the function approximator, making it robust to generalization issues. However, the $\\epsilon$-greedy explorations is random, not systematic."
    ]
   },
   {
