--- a/notebooks/Reinforcement learning.ipynb
+++ b/notebooks/Reinforcement learning.ipynb
@@ -1413,7 +1413,60 @@
     "2. Impact of Generalization: function approximation relies on generalization, so updating the estimate for one state can also affect the values of nearby or similar states. For example, when the agent visits a state and updates its value based on the observed return, neighboring states may also have their values updated indirectly. This can cause the optimistic initial values of unvisited states to disappear prematurely, even though those states have never been explored. As a result, the agent might stop exploring too soon.\n",
     "\n",
     "### $\\epsilon$-Greedy Exploration\n",
-    "An alternative approach is $\\epsilon$-greedy exploration since it does not depend on optimistic initialization or how the weights are set. It only relies on the final outputs of the function approximator, making it robust to generalization issues. However, the $\\epsilon$-greedy explorations is random, not systematic."
+    "An alternative approach is $\\epsilon$-greedy exploration since it does not depend on optimistic initialization or how the weights are set. It only relies on the final outputs of the function approximator, making it robust to generalization issues. However, the $\\epsilon$-greedy explorations is random, not systematic.\n",
+    "\n",
+    "## Average Reward\n",
+    "Average reward is another way of formalizing a continuing task but without discounting. In the average reward case, the quality of a policy is defined as the average reward the agent will recieve by following that policy, where\n",
+    "\n",
+    "$$r(\\pi) = ...$$\n",
+    "\n",
+    "Here $\\mu_{\\pi}(s)$ is a probability distribution that tells the agent how frequent each state is visited. By accounting this factor, we takes the weighted sum for the reward since more frequently visited state will has a higher weight than the less frequently visited states.\n",
+    "\n",
+    "Following this formulation, we defined the optimal policy to the policy with the highest average reward $r(\\pi)$.\n",
+    "\n",
+    "In the average-reward setting, returns are defined in terms of differences between the observed rewards and the average reward, where\n",
+    "$$G_t = ...$$\n",
+    "This is called the differential return. We can use this differential return to write the Bellman equations for the average reward setting. This is very similar to the discounting setting since the core of the equation still uses computed the expected return under a policy. The only difference is that we uses a different reward since we remove the discount for future rewards and use the average reward instead. The Bellman equations now become\n",
+    "\n",
+    "$$v_{\\pi}(s) = ...$$\n",
+    "$$q_{\\pi}(s, a) = ...$$\n",
+    "$$v_{*}(s) = ...$$\n",
+    "$$q_{*}(s, a) = ...$$\n",
+    "\n",
+    "## Average Reward\n",
+    "Average reward is another way of formalizing a continuing task without using discounting, which stabilizes the return and focuses on long-term steady-state performance. Instead of reducing the value of future rewards with a discount factor $\\gamma$, we evaluate a policy based on the average reward per time step that the agent receives when following that policy indefinitely. The average reward of a policy $\\pi$ is defined as\n",
+    "\n",
+    "$$r(\\pi) = \\sum_{s \\in \\mathcal{S}} \\mu_{\\pi}(s) \\sum_{a \\in \\mathcal{A}} \\pi(a|s) \\, \\mathbb{E}[R_{t+1} \\mid S_t = s, A_t = a]$$\n",
+    "\n",
+    "$\\mu_{\\pi}(s)$ is the stationary distribution of states under policy $\\pi$, representing how frequently each state is visited in the long run. By weighting rewards using $\\mu_{\\pi}(s)$, states that are visited more often have greater influence on the average reward.\n",
+    "\n",
+    "The optimal policy, $\\pi_$, is then the one that maximizes the average reward\n",
+    "\n",
+    "$$\\pi_* = \\arg\\max_\\pi r(\\pi)$$\n",
+    "\n",
+    "Since there is no discounting, we redefine returns using the differential return, which measures the cumulative difference between observed rewards and the average reward\n",
+    "\n",
+    "$$G_t = \\sum_{k=0}^{\\infty} \\big( R_{t+k+1} - r(\\pi) \\big)$$\n",
+    "\n",
+    "This formulation focuses on relative improvements compared to the average reward rather than just raw accumulated reward.\n",
+    "\n",
+    "Using the differential return, we can write the Bellman equations for the average reward setting. These equations are very similar to the discounted case but without the discount factor, and using the average reward term instead, where\n",
+    "\n",
+    "$$\n",
+    "v_{\\pi}(s) = \\sum_{a} \\pi(a|s) \\sum_{s', r} p(s', r \\mid s, a) \\big[ r - r(\\pi) + v_{\\pi}(s') \\big]\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "q_{\\pi}(s, a) = \\sum_{s', r} p(s', r \\mid s, a) \\big[ r - r(\\pi) + \\sum_{a'} \\pi(a'|s') q_{\\pi}(s', a') \\big]\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "v_*(s) = \\max_a \\sum_{s', r} p(s', r \\mid s, a) \\big[ r - r(\\pi_*) + v_*(s') \\big]\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "q_*(s, a) = \\sum_{s', r} p(s', r \\mid s, a) \\big[ r - r(\\pi_*) + \\max_{a'} q_*(s', a') \\big]\n",
+    "$$"
    ]
   },
   {
