RL: Added average reward from control

--- a/notebooks/Reinforcement learning.ipynb
+++ b/notebooks/Reinforcement learning.ipynb
@@ -1416,31 +1416,13 @@
     "An alternative approach is $\\epsilon$-greedy exploration since it does not depend on optimistic initialization or how the weights are set. It only relies on the final outputs of the function approximator, making it robust to generalization issues. However, the $\\epsilon$-greedy explorations is random, not systematic.\n",
     "\n",
     "## Average Reward\n",
-    "Average reward is another way of formalizing a continuing task but without discounting. In the average reward case, the quality of a policy is defined as the average reward the agent will recieve by following that policy, where\n",
-    "\n",
-    "$$r(\\pi) = ...$$\n",
-    "\n",
-    "Here $\\mu_{\\pi}(s)$ is a probability distribution that tells the agent how frequent each state is visited. By accounting this factor, we takes the weighted sum for the reward since more frequently visited state will has a higher weight than the less frequently visited states.\n",
-    "\n",
-    "Following this formulation, we defined the optimal policy to the policy with the highest average reward $r(\\pi)$.\n",
-    "\n",
-    "In the average-reward setting, returns are defined in terms of differences between the observed rewards and the average reward, where\n",
-    "$$G_t = ...$$\n",
-    "This is called the differential return. We can use this differential return to write the Bellman equations for the average reward setting. This is very similar to the discounting setting since the core of the equation still uses computed the expected return under a policy. The only difference is that we uses a different reward since we remove the discount for future rewards and use the average reward instead. The Bellman equations now become\n",
-    "\n",
-    "$$v_{\\pi}(s) = ...$$\n",
-    "$$q_{\\pi}(s, a) = ...$$\n",
-    "$$v_{*}(s) = ...$$\n",
-    "$$q_{*}(s, a) = ...$$\n",
-    "\n",
-    "## Average Reward\n",
     "Average reward is another way of formalizing a continuing task without using discounting, which stabilizes the return and focuses on long-term steady-state performance. Instead of reducing the value of future rewards with a discount factor $\\gamma$, we evaluate a policy based on the average reward per time step that the agent receives when following that policy indefinitely. The average reward of a policy $\\pi$ is defined as\n",
     "\n",
     "$$r(\\pi) = \\sum_{s \\in \\mathcal{S}} \\mu_{\\pi}(s) \\sum_{a \\in \\mathcal{A}} \\pi(a|s) \\, \\mathbb{E}[R_{t+1} \\mid S_t = s, A_t = a]$$\n",
     "\n",
     "$\\mu_{\\pi}(s)$ is the stationary distribution of states under policy $\\pi$, representing how frequently each state is visited in the long run. By weighting rewards using $\\mu_{\\pi}(s)$, states that are visited more often have greater influence on the average reward.\n",
     "\n",
-    "The optimal policy, $\\pi_$, is then the one that maximizes the average reward\n",
+    "The average reward of a policy, $r(\\pi)$ is a single scalar value. So, we can easily compares two policies by comparing their average reward, and the policy with the higher average reward is better. The optimal policy, $\\pi_*$, is then the one that maximizes the average reward\n",
     "\n",
     "$$\\pi_* = \\arg\\max_\\pi r(\\pi)$$\n",
     "\n",
@@ -1452,21 +1434,34 @@
     "\n",
     "Using the differential return, we can write the Bellman equations for the average reward setting. These equations are very similar to the discounted case but without the discount factor, and using the average reward term instead, where\n",
     "\n",
-    "$$\n",
-    "v_{\\pi}(s) = \\sum_{a} \\pi(a|s) \\sum_{s', r} p(s', r \\mid s, a) \\big[ r - r(\\pi) + v_{\\pi}(s') \\big]\n",
-    "$$\n",
+    "$$v_{\\pi}(s) = \\sum_{a} \\pi(a|s) \\sum_{s', r} p(s', r \\mid s, a) \\big[ r - r(\\pi) + v_{\\pi}(s') \\big]$$\n",
+    "\n",
+    "$$q_{\\pi}(s, a) = \\sum_{s', r} p(s', r \\mid s, a) \\big[ r - r(\\pi) + \\sum_{a'} \\pi(a'|s') q_{\\pi}(s', a') \\big]$$\n",
+    "\n",
+    "$$v_*(s) = \\max_a \\sum_{s', r} p(s', r \\mid s, a) \\big[ r - r(\\pi_*) + v_*(s') \\big]$$\n",
+    "\n",
+    "$$q_*(s, a) = \\sum_{s', r} p(s', r \\mid s, a) \\big[ r - r(\\pi_*) + \\max_{a'} q_*(s', a') \\big]$$\n",
+    "\n",
+    "### Using Average Reward for Control\n",
+    "The updates using average reward are very similar to those in the discounted case, with a key difference on how the update is computed. In standard Q-learning with discounting, the update rule is\n",
     "\n",
     "$$\n",
-    "q_{\\pi}(s, a) = \\sum_{s', r} p(s', r \\mid s, a) \\big[ r - r(\\pi) + \\sum_{a'} \\pi(a'|s') q_{\\pi}(s', a') \\big]\n",
+    "q(S_t, A_t) \\leftarrow q(S_t, A_t) + \\alpha \\big[ R_{t+1} + \\gamma \\max_{a’} q(S_{t+1}, a’) - q(S_t, A_t) \\big]\n",
     "$$\n",
     "\n",
-    "$$\n",
-    "v_*(s) = \\max_a \\sum_{s', r} p(s', r \\mid s, a) \\big[ r - r(\\pi_*) + v_*(s') \\big]\n",
-    "$$\n",
+    "Here, the discount factor $\\gamma$ down-weights future rewards, emphasizing immediate rewards more strongly. In average reward methods, there is no discount factor $\\gamma$. Instead, we subtract the current estimate of the average reward $r(\\pi)$ of the policy at each step, where\n",
     "\n",
     "$$\n",
-    "q_*(s, a) = \\sum_{s', r} p(s', r \\mid s, a) \\big[ r - r(\\pi_*) + \\max_{a'} q_*(s', a') \\big]\n",
-    "$$"
+    "q(S_t, A_t) \\leftarrow q(S_t, A_t) + \\alpha \\big[ R_{t+1} - r(\\pi) + \\max_{a’} q(S_{t+1}, a’) - q(S_t, A_t) \\big]\n",
+    "$$\n",
+    "\n",
+    "By subtracting the average reward, the updates center the rewards around zero, which keeps the learning process stable and focuses the agent on relative improvements over the long-term steady-state performance rather than absolute return.\n",
+    "\n",
+    "In addition to updating the action-value function, we must also update the estimate of the average reward after each state–action–reward pair. This is because each new interaction with the environment provides new information about the overall performance of the policy. The update rule for the average reward is\n",
+    "\n",
+    "$$r(\\pi) \\leftarrow r(\\pi) + \\beta \\big(R_{t+1} - r(\\pi)\\big)$$\n",
+    "\n",
+    "$\\beta$ is a small step-size parameter. A smaller \\beta ensures that the estimate of the average reward changes gradually, preventing instability or large fluctuations due to single, noisy samples.\n"
    ]
   },
   {
