RL: Add policy gradient intro

--- a/notebooks/Reinforcement learning.ipynb
+++ b/notebooks/Reinforcement learning.ipynb
@@ -1466,6 +1466,50 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b85af4af",
+   "metadata": {},
+   "source": [
+    "# Policy Gradient Method\n",
+    "So far, all the method we introduces are value based learning, which means we learns the state values and action values functions from experience, then the agent select actions bsed on these value estimates, and we extract the policy from the leraned value functions. Therefore, the value functions acts like a bridge between the agent's current state and policy.\n",
+    "\n",
+    "However, we can also learns a policy direction as a function parametrized by $\\theta$, which indicates the policy function's parameter. Therefore, we can write a policy as the probability to select an action given the agent's current state and the policy parameters, where\n",
+    "\n",
+    "$$\\pi(a | s, \\theta)$$\n",
+    "\n",
+    "Here, the constrains from probability theories are\n",
+    "1. The probabilty for selecting each action at every state must be greater or equal to 0\n",
+    "2. The sum of probability for selecting all actions must equal to 1 for every state\n",
+    "\n",
+    "Given by \n",
+    "\n",
+    "1. $pi(a | s, \\theta) \\geq 0$ for all A, and S\n",
+    "2. $\\sum_a pi(a | s, \\theta) = 1$\n",
+    "\n",
+    "To satisfy these constrains, we define the output value from the learned policy function to be $h(s, a, \\theta) \\in R$, which is also called action preference. Then, we can apply a softmax function to all the action preferences at each state to ensure all the policy satisfy the constrains from the probability theorm, where\n",
+    "\n",
+    "$\\pi(a | s, \\theta) = ...$\n",
+    "\n",
+    "\n",
+    "# Policy Gradient Method\n",
+    "So far, all the methods we have introduced are value-based learning methods. In these methods, the agent first learns value functions, such as the state-value function $v(s)$ or the action-value function $q(s, a)$ from experience. Then, the agent selects actions based on these value estimates, and the policy is indirectly derived from the learned value functions. In other words, the value functions act as a bridge between the agent’s current state and its decision-making policy.\n",
+    "\n",
+    "Instead of learning value functions and deriving a policy from them, we can directly learn the policy as a parameterized function. We represent the policy by $\\pi(a \\mid s, \\theta)$, which gives the probability of selecting action a given state $s$ and parameters $\\theta$. Here, $\\theta$ represents the learnable parameters of the policy.\n",
+    "\n",
+    "For $\\pi(a \\mid s, \\theta)$ to be a valid probability distribution, it must satisfy two constraints:\n",
+    "\n",
+    "1. Non-negativity: $\\pi(a \\mid s, \\theta) \\geq 0 \\quad \\forall a \\in \\mathcal{A}, , s \\in \\mathcal{S}$\n",
+    "\n",
+    "2. Normalization: $\\sum_a \\pi(a \\mid s, \\theta) = 1 \\quad \\forall s \\in \\mathcal{S}$\n",
+    "\n",
+    "These ensure that for every state, the probability of each action is non-negative and the total probability over all actions equals 1.\n",
+    "\n",
+    "To satisfy these constraints, we first define a real-valued function called the action preference, denoted as $h(s, a, \\theta)$. The action preference represents how desirable it is to take action a in state s under parameters $\\theta$. Since $h(s, a, \\theta)$ can take any real value, we convert it into a valid probability distribution using the softmax function, where\n",
+    "\n",
+    "$$\\pi(a \\mid s, \\theta) = \\frac{e^{h(s, a, \\theta)}}{\\sum_{a’} e^{h(s, a’, \\theta)}}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "92d1afc4",
    "metadata": {},
    "source": [
