RL: Added Policy gradient objective

--- a/notebooks/Reinforcement learning.ipynb
+++ b/notebooks/Reinforcement learning.ipynb
@@ -1466,34 +1466,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b85af4af",
+   "id": "5a8d663f",
    "metadata": {},
    "source": [
     "# Policy Gradient Method\n",
-    "So far, all the method we introduces are value based learning, which means we learns the state values and action values functions from experience, then the agent select actions bsed on these value estimates, and we extract the policy from the leraned value functions. Therefore, the value functions acts like a bridge between the agent's current state and policy.\n",
-    "\n",
-    "However, we can also learns a policy direction as a function parametrized by $\\theta$, which indicates the policy function's parameter. Therefore, we can write a policy as the probability to select an action given the agent's current state and the policy parameters, where\n",
-    "\n",
-    "$$\\pi(a | s, \\theta)$$\n",
-    "\n",
-    "Here, the constrains from probability theories are\n",
-    "1. The probabilty for selecting each action at every state must be greater or equal to 0\n",
-    "2. The sum of probability for selecting all actions must equal to 1 for every state\n",
-    "\n",
-    "Given by \n",
-    "\n",
-    "1. $pi(a | s, \\theta) \\geq 0$ for all A, and S\n",
-    "2. $\\sum_a pi(a | s, \\theta) = 1$\n",
-    "\n",
-    "To satisfy these constrains, we define the output value from the learned policy function to be $h(s, a, \\theta) \\in R$, which is also called action preference. Then, we can apply a softmax function to all the action preferences at each state to ensure all the policy satisfy the constrains from the probability theorm, where\n",
-    "\n",
-    "$\\pi(a | s, \\theta) = ...$\n",
-    "\n",
-    "\n",
-    "# Policy Gradient Method\n",
     "So far, all the methods we have introduced are value-based learning methods. In these methods, the agent first learns value functions, such as the state-value function $v(s)$ or the action-value function $q(s, a)$ from experience. Then, the agent selects actions based on these value estimates, and the policy is indirectly derived from the learned value functions. In other words, the value functions act as a bridge between the agent’s current state and its decision-making policy.\n",
     "\n",
-    "Instead of learning value functions and deriving a policy from them, we can directly learn the policy as a parameterized function. We represent the policy by $\\pi(a \\mid s, \\theta)$, which gives the probability of selecting action a given state $s$ and parameters $\\theta$. Here, $\\theta$ represents the learnable parameters of the policy.\n",
+    "Instead of learning value functions and deriving a policy from them, we can directly learn the policy as a parameterized function and optimize it. This method is called the policy gradient method. We represent the policy by $\\pi(a \\mid s, \\theta)$, which gives the probability of selecting action a given state $s$ and parameters $\\theta$. Here, $\\theta$ represents the learnable parameters of the policy.\n",
     "\n",
     "For $\\pi(a \\mid s, \\theta)$ to be a valid probability distribution, it must satisfy two constraints:\n",
     "\n",
@@ -1505,7 +1484,40 @@
     "\n",
     "To satisfy these constraints, we first define a real-valued function called the action preference, denoted as $h(s, a, \\theta)$. The action preference represents how desirable it is to take action a in state s under parameters $\\theta$. Since $h(s, a, \\theta)$ can take any real value, we convert it into a valid probability distribution using the softmax function, where\n",
     "\n",
-    "$$\\pi(a \\mid s, \\theta) = \\frac{e^{h(s, a, \\theta)}}{\\sum_{a’} e^{h(s, a’, \\theta)}}$$"
+    "$$\\pi(a \\mid s, \\theta) = \\frac{e^{h(s, a, \\theta)}}{\\sum_{a’} e^{h(s, a’, \\theta)}}$$\n",
+    "\n",
+    "After the softmax function, the probability distribution for all actiosn under every states is now valid.\n",
+    "\n",
+    "## Advanages of Policy Gradient Method\n",
+    "The optimal policy for a given problem can be deterministic or stochastic. In value-based methods, improving the policy usually involves making it greedy or $\\epsilon$-greedy with respect to the current action-value estimates.\n",
+    "\n",
+    "However, this approach has two major limitations:\n",
+    "1. Difficulty in Learning Stochastic Policies: in many problems, the optimal policy is stochastic, meaning the agent must randomize its actions to perform well (e.g., Rock-Paper-Scissors, exploration in partially observable environments). Value-based methods struggle here because they force a near-deterministic improvement step by greedily selecting the best action or occasionally exploring using $\\epsilon$-greedy. This makes it difficult for the agent to naturally converge to a well-calibrated stochastic policy, as the randomness is artificially imposed instead of being learned.\n",
+    "\n",
+    "2. Limitations of $\\epsilon$-Greedy Exploration: $\\epsilon$-greedy is used in both tabular and function approximation settings to ensure exploration. However, because exploration is purely random, the agent always explores, even when it has already learned the optimal behavior. This creates a performance ceiling, as the agent never fully transitions to optimal exploitation and continues to take suboptimal random actions occasionally.\n",
+    "\n",
+    "\n",
+    "Policy gradient methods directly parameterize and optimize the policy. This allows them to adapt naturally to the type of policy required. If the optimal policy is deterministic, the learned policy will gradually converge to a pure deterministic form without requiring artificial exploration like $\\epsilon$-greedy. If the optimal policy is stochastic, the method will self-adjust and discover the correct distribution of actions through experience. This flexibility makes policy gradient methods more expressive and often more suitable for complex or uncertain environments.\n",
+    "\n",
+    "Also, in some problems, the value function can be extremely complex, while the policy itself is simple. In such cases, directly learning the policy is more efficient and practical than learning a full value function and deriving the policy indirectly. However, this is problem-dependent as there are also situations where value-based methods are simpler and more stable.\n",
+    "\n",
+    "## Policy Gradient Objective\n",
+    "The goal of reinforcement learning is to find a policy that maximizes the agent’s cumulative rewards. For policy gradient methods, we directly optimize a parameterized policy $\\pi(a \\mid s, \\theta)$. The objective function for this approach can be defined as the average reward under a given policy, where\n",
+    "\n",
+    "$$r(\\pi) = \\sum_{s \\in \\mathcal{S}} \\mu_{\\pi}(s) \\sum_{a \\in \\mathcal{A}} \\pi(a \\mid s) \\sum_{s’, r} p(s’, r \\mid s, a) , r$$\n",
+    "\n",
+    "* $\\sum_{s’, r} p(s’, r \\mid s, a) r$: the expected immediate reward for taking action a in state s.\n",
+    "* $\\pi(a \\mid s) \\sum_{s’, r} p(s’, r \\mid s, a) r$: the expected reward at state s, weighted by the probability of selecting action a under policy $\\pi$.\n",
+    "* $\\mu_{\\pi}(s)$: The stationary distribution over states under policy $\\pi$, representing how frequently each state is visited when the agent follows $\\pi$.\n",
+    "\n",
+    "\n",
+    "This objective function captures the long-term performance of a policy, where it first accounts for how often each state is visited $\\mu_{\\pi}(s)$. Then, for each state, it considers the probability of taking each action and the expected reward for that action.\n",
+    "\n",
+    "By maximizing $r(\\pi)$ with respect to the policy parameters $\\theta$, the agent gradually adjusts its behavior to favor actions and states that yield higher rewards.\n",
+    "\n",
+    "Formally, the optimization problem is:\n",
+    "\n",
+    "$$\\theta^* = \\arg \\max_\\theta r(\\pi_\\theta)$$"
    ]
   },
   {
